<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_menu_challenges"
            android:title="@string/menu_challenges" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_menu_progress"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_menu_rewards"
            android:title="@string/menu_rewards" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/menu_notifications" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_menu_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>